<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.proyectoandroid.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.proyectoandroid.ui.crearTest.CrearTestFragment"
        android:label="@string/crear_test"
        tools:layout="@layout/fragment_crear_test" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.proyectoandroid.ui.hacerTest.HacerTestFragment"
        android:label="@string/hacer_test"
        tools:layout="@layout/fragment_hacer_test" />
    <fragment
        android:id="@+id/nav_configuration"
        android:name="com.example.proyectoandroid.ui.config.ConfigFragment"
        android:label="@string/menu_config"
        tools:layout="@layout/fragment_config" />

</navigation>