<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etQuestion"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"

            android:clickable="true"
            android:hint="@string/question_placeholder"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/btnRemoveQuestion"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"


            android:background="@color/colorPrimaryDark"
            android:src="@drawable/ic_remove"

            android:textColor="@android:color/white" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/editRgAnswers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="15dp">


            <RadioButton
                android:id="@+id/editRbAnswer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <RadioButton
                android:id="@+id/editRbAnswer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <RadioButton
                android:id="@+id/editRbAnswer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/etAnswer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="2dp"
                android:background="@android:color/transparent"
                android:hint="@string/answer1_placeholder"
                android:textSize="14sp"
                />

            <EditText
                android:id="@+id/etAnswer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="2dp"
                android:background="@android:color/transparent"
                android:hint="@string/answer2_placeholder"
                android:textSize="14sp"
                />

            <EditText
                android:id="@+id/etAnswer3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="2dp"
                android:background="@android:color/transparent"
                android:hint="@string/answer3_placeholder"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>