<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/quizName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Quiz Name"
            android:layout_weight="2"

            android:textSize="35sp" />

        <TextView
            android:id="@+id/tvTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="00:30"

            android:textSize="35sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvQuestionNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/question" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:text="here goes question here goes question here qoes question"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/rgAnswers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="45dp">

        <RadioButton
            android:id="@+id/rbAnswer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="answer1" />

        <RadioButton
            android:id="@+id/rbAnswer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="answer 2" />

        <RadioButton
            android:id="@+id/rbAnswer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="answer 3" />
    </RadioGroup>

    <Button
        android:id="@+id/btnConfirm"
        android:layout_marginTop="30sp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:text="@string/confirm"
        android:textColor="@android:color/white" />


</LinearLayout>